update background color

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,7 @@ html {
 
 body {
   font-family: 'Times New Roman', Times, serif;
-  background-color: #f8e8a6;
+  background-color: #fce483;
   text-align: center;
 }
 
